# bluearchive-birthday-ical

./: README.md  birthday.ics  main.py  pyproject.toml
.github/workflows/: sync.yml
