[tool.poetry]
name = "bluearchive-birthday-ical"
version = "0.1.0"
description = ""
authors = ["utgwkk <utagawakiki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
