[project]
name = "bluearchive-birthday-ical"
version = "0.1.0"
description = ""
authors = [{ name = "utgwkk", email = "utagawakiki@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "bs4>=0.0.1",
    "requests>=2.26.0,<3.0.0",
    "icalendar>=4.0.9,<5.0.0",
]

[tool.uv]
package = false
